--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -2,6 +2,9 @@
   <div class="header-name">
   <%= link_to edit_user_path(current_user) do %>
       <%= current_user.name %>
+      <%= link_to edit_user_path(current_user) do %>
+      <%= current_user.name %>
+    <% end %>
     <% end %>
   </div>
   <div class="create-room">
